# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
#

2005-11-17 18:35:18 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-27

    Summary:
      web, start to implement the access log
    Revision:
      itools--main--0.12--patch-27


    modified files:
     Changelog scripts/icms.py web/request.py web/server.py


2005-11-17 17:39:58 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-26

    Summary:
      web, fix to get "Apache Benchmark" working
    Revision:
      itools--main--0.12--patch-26

    Fix when the status line is wrong. Fix when there is not an
    Accept-Language header.

    modified files:
     Changelog web/exceptions.py web/request.py web/response.py
     web/server.py


2005-11-17 16:29:12 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-25

    Summary:
      cms, fix import of csv handler
    Revision:
      itools--main--0.12--patch-25


    modified files:
     Changelog cms/csv_.py


2005-11-17 15:00:33 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-24

    Summary:
      merge csv documentation work from piotr
    Revision:
      itools--main--0.12--patch-24

    Patches applied:
    
     * piotr@macuk.pl--public/itools--csv--0.12--patch-6
       Sections added, more schema description, file structure table
    

    modified files:
     Changelog doc/csv.tex

    new patches:
     piotr@macuk.pl--public/itools--csv--0.12--patch-6


2005-11-16 19:12:56 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-23

    Summary:
      csv, add comment about the virtual handlers issue
    Revision:
      itools--main--0.12--patch-23


    modified files:
     Changelog csv/itools_csv.py


2005-11-16 19:09:13 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-22

    Summary:
      resources, add "truncate" method (fixes csv test case)
    Revision:
      itools--main--0.12--patch-22


    modified files:
     Changelog handlers/File.py resources/base.py resources/file.py