@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
 #
 
+2005-11-17 19:24:06 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-28
+
+    Summary:
+      web, finish access log
+    Revision:
+      itools--main--0.12--patch-28
+
+
+    modified files:
+     Changelog web/response.py web/server.py
+
+
 2005-11-17 18:35:18 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-27
 
     Summary:
